--- a/src/index.scss
+++ b/src/index.scss
@@ -26,8 +26,12 @@ $background-color-primary: #333333;
 $font-color-primary: #FFFFFF;
 
 // font
+$font-style-base-text: normal 16px/120% "Montserrat", sans-serif;
+$font-style-list-title: bold 18px/120% "Montserrat", sans-serif;
+
+
 @font-face {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   src: url('./assets/fonts/Montserrat-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
@@ -35,7 +39,7 @@ $font-color-primary: #FFFFFF;
 }
 
 @font-face {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   src: url('./assets/fonts/Montserrat-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
@@ -43,10 +47,7 @@ $font-color-primary: #FFFFFF;
 }
 
 .page {
-  font-family: 'Montserrat';
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 120%;
+  font: $font-style-base-text;
   color: $font-color-primary;
   background-color: $background-color-deep;
 }
