feat: add range-slider component

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ $accent-background-color-primary: #1D996E;
 $accent-background-color-secondary: #14694b;
 $background-color-deep: #03110C;
 $background-color-primary: #333333;
+$background-color-secondary: #B8B8CC;
 $font-color-primary: #FFFFFF;
 
 // font
