fix: styles button component and page-not-found

--- a/src/app/main/components/button/button.scss
+++ b/src/app/main/components/button/button.scss
@@ -1,7 +1,8 @@
 @import '../../../../index.scss';
 
 .button {
-  padding: 14px 20px;
+  font: normal 16px/120% "Montserrat", sans-serif;
   border-radius: 4px;
   background: $accent-background-color-primary;
+  color: $font-color-primary;
 }
