--- a/src/app/main/pages/page-not-found/page-not-found.scss
+++ b/src/app/main/pages/page-not-found/page-not-found.scss
@@ -1,4 +1,4 @@
-@import '../../../index.scss';
+@import '../../../../index.scss';
 
 
 .section-error {
@@ -16,7 +16,7 @@
 }
 
 .section-error__subtitle {
-  margin-bottom: 40px;
+  margin: 0 0 40px;
 }
 
 .section-error__submit-button {
