--- a/src/app/main/components/button/button.scss
+++ b/src/app/main/components/button/button.scss
@@ -1,7 +1,7 @@
 @import '../../../../index.scss';
 
 .button {
-  font: normal 16px/120% "Montserrat", sans-serif;
+  font: $font-style-base-text;
   border-radius: 4px;
   background: $accent-background-color-primary;
   color: $font-color-primary;
