--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,7 @@ $font-color-primary: #FFFFFF;
 // font
 $font-style-base-text: normal 16px/120% "Montserrat", sans-serif;
 $font-style-list-title: bold 18px/120% "Montserrat", sans-serif;
+$font-style-section-title-normal: bold 24px/120% "Montserrat", sans-serif;
 
 
 @font-face {
