--- a/src/app/main/components/input/input.scss
+++ b/src/app/main/components/input/input.scss
@@ -11,3 +11,9 @@
   min-width: 50px;
   width: 50px;
 }
+
+.input--search {
+ background-image: url("../../../../assets/icon/search-icon.svg"); 
+ background-repeat: no-repeat;
+ background-position: center right 12px;
+}
