--- a/src/app/main/components/product-card-preview/product-card-preview.scss
+++ b/src/app/main/components/product-card-preview/product-card-preview.scss
@@ -9,8 +9,8 @@
 
 .product-card-preview__image {
   width: 100%;
-  height: auto;
-  object-fit: contain;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
   margin-bottom: 16px;
   grid-column: 1 / -1;
 }
