--- a/src/app/main/components/button/button.scss
+++ b/src/app/main/components/button/button.scss
@@ -7,6 +7,7 @@
   background-color: transparent;
   border-radius: 4px;
   border: 1px solid $border-color-primary;
+  cursor: pointer;
 }
 
 .button--accent {
