--- a/src/app/main/components/link/link.scss
+++ b/src/app/main/components/link/link.scss
@@ -7,3 +7,12 @@
   text-decoration: none;
   display: flex;
 }
+
+.link svg {
+  flex-shrink: 0;
+  fill: $accent-background-color-primary;
+}
+
+.link:hover svg {
+  fill: $accent-background-color-secondary;
+}
