--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,7 @@
 $border-color-primary: #43494D;
 $accent-background-color-primary: #1D996E;
 $accent-background-color-secondary: #14694b;
+$accent-background-color-tertiary: yellowgreen;
 $background-color-deep: #03110C;
 $background-color-primary: #333333;
 $background-color-secondary: #B8B8CC;
