--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,21 @@
   margin: 0 auto;
 }
 
+html {
+  height: 100%;
+}
+
+html::-webkit-scrollbar {
+  width: 0;
+}
+
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
 
 //declarated-styles///////////////////////////////////////////////////
 
